# A-Star

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  run.sh  run.sh~
srcs/: main.cpp  main.cpp~
